--- a/app/views/articles/_comment.html.erb
+++ b/app/views/articles/_comment.html.erb
@@ -1,4 +1,4 @@
 <div>
-  <h4>Comment by <%= comment.author_name %></h4>
+  <strong>Comment by <%= comment.author_name %></strong>
   <p class="comment"><%= comment.body %></p>
 </div>
