Enable integrity check to webpacker

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,7 +6,7 @@
   <% end %>
 </p>
 <% if @article.image.exists? %>
-<p><%= image_tag @article.image.url %></p>
+<p><%= image_tag @article.image.url, class: "article-img"   %></p>
 <% end %>
 <p><%= @article.body %></p>
 
