--- a/app/views/articles/_comment.html.erb
+++ b/app/views/articles/_comment.html.erb
@@ -1,5 +1,5 @@
-<div>
-  <strong>Comment by <%= comment.author_name %></strong>
-  <p class="comment"><%= comment.body %></p>
-  <p>Posted <%= distance_of_time_in_words(comment.article.created_at, comment.created_at) %> later</p>
+<div class="comment">
+  <p class="author-name"><%= comment.author_name %></p>
+  <span class="date">Posted <%= distance_of_time_in_words(Time.now, comment.created_at) %> ago</span>
+  <p class="comment-body"><%= comment.body %></p>
 </div>
