--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -13,16 +13,18 @@
       <%= f.text_area :body %>
     </p>
     <p>
-    <%= f.label :tag_list %><br />
-    <%= f.text_field :tag_list %>
+      <%= f.label :tag_list %><br />
+      <%= f.text_field :tag_list %>
     </p>
-   <p>
     <% if @article.image.exists? %>
-      <%= image_tag @article.image.url %><br/>
+      <div class="article-img">
+        <%= image_tag @article.image.url %><br/>
+      </div>
     <% end %>
-    <%= f.label :image, "Attach a New Image" %><br />
-    <%= f.file_field :image %>
-   </p>
+    <p>
+      <%= f.label :image, "Attach a New Image" %><br />
+      <%= f.file_field :image %>
+    </p>
     <p>
       <%= f.submit %>
     </p>
