--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,15 +1,23 @@
-<h1>All Articles</h1>
 
-<ul id="articles">
-  <% @articles.each do |article| %>
-    <li>
-      <%= link_to article.title, article_path(article) %>
-      <p>
-      <%= article.body %>
-      </p>
-    </li>
-    
-  <% end %>
-</ul>
 
-<%= link_to "Create a New Article", new_article_path, class: "new_article" %>
+  <h1>Medium</h1>
+
+  <ul class="articles">
+    <% @articles.each do |article| %>
+      <li>
+        <h3 class="article-title">
+          <%= link_to article.title, article_path(article) %>
+        </h3>
+        <p>
+          <%= article.body %>
+        </p>
+      </li>
+    <% end %>
+  </ul>
+
+  <div class="create-btn">
+    <button>
+      <%= link_to "Create a New Article", new_article_path %>
+    </button>
+  </div>
+</div>
