--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,18 +6,23 @@
   <% end %>
 </p>
 <% if @article.image.exists? %>
-<p><%= image_tag @article.image.url, class: "article-img"   %></p>
+      <div class="article-img">
+        <%= image_tag @article.image.url %><br/>
+      </div>
 <% end %>
+
 <p><%= @article.body %></p>
 
-<h3>Comments (<%= @article.comments.size %>)</h3>
+<% if @article.comments.size > 0 %>
+  <h3>Comments (<%= @article.comments.size %>)</h3>
+<% end %>
 
-<h3>Comments</h3>
 <%= render partial: 'articles/comment', collection: @article.comments %>
 
 <%= render partial: 'comments/form' %>
 
-<%= link_to "<< Back to Articles List", articles_path %>
-<%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"}%>
-<%= link_to "edit", edit_article_path(@article) %>
-
+<div class="nav-links">
+  <%= link_to "Back to Articles List", articles_path %>
+  <%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"}%>
+  <%= link_to "edit", edit_article_path(@article) %>
+</div>
